# edupointx

./: .gitignore  README.md  __init__.py  app.py  db.py  edupointx.sql  main.py  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
EDUPOINTX/: __init__.py  database.py  generate_qr.py  generate_student_cards.py  main.py  models.py  requirements.txt  services.py
EDUPOINTX/.streamlit/: secrets.toml
EDUPOINTX/modules/: admin.py  auth.py  db.py  qr_deed.py  qr_redeem.py  signup.py  student.py  teacher.py
EDUPOINTX/static/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
mobile_app/: __init__.py  database.py  main.py  models.py  schemas.py  services.py
mobile_app/data/: edupointx_mobile.db
mobile_app/static/: app.js  index.html  service-worker.js  styles.css
modules/: admin.py  auth.py  db.py  signup.py  student.py  teacher.py
