[project]
name = "edupointx"
version = "0.1.0"
description = "School Points & Redemption System"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "opencv-python-headless (>=4.10.0.84,<5.0.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "qrcode (>=8.2.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
